# pico-projects

adevsan-2axis/: deneme3.py
adevsan-2axis/1.3_Oled/: main.py  pico_main.py  test.py
adevsan-2axis/2.8_LCD/: Adefsan.raw  Deneme.py  adefsanAIT.raw  as5600.py  converterdeneme.py  deneme3.py  ili9341.py  lcd_demo_shapes.py  lcd_font_deneme.py  main.py
adevsan-2axis/AEAT/: ReadPos.py  read.py
aet-encoder-reader/: CMakeLists.txt  README.md  flash_main.cpp  main.cpp
aet-encoder-reader/src/: CMakeLists.txt  aeat6600.cpp  angle_reader.c  ili934x.cpp
aet-encoder-reader/src/fonts/: CMakeLists.txt
aet-encoder-reader/src/fonts/include/: FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeSansBold12pt7b.h
aet-encoder-reader/src/include/: aeat6600.h  ili934x.h
rotary-encoder-reader/: R_Encoder.py
